--- a/src/assets/css/page.css
+++ b/src/assets/css/page.css
@@ -17,7 +17,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     height: 100%;
     background: url(../img/home.jpg) no-repeat 50%;
     background-size: 100% 100%;
-    transition: width .3s;
+    /*transition: width .3s;*/
 }
 .aside-box{
     height: 100%;
@@ -26,7 +26,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     justify-content: center;
     -webkit-box-align: center;
     align-items: center;
-    background: url(../img/home.png) no-repeat 50%;
+    background: url(../img/home.jpg) no-repeat 50%;
 }
 .marsk{
     position: absolute;
