--- a/src/assets/css/page.css
+++ b/src/assets/css/page.css
@@ -33,6 +33,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     width: 100%;
     height:100%;
     background: hsla(0,0%,100%,.5);
+    right: 0;
+  /**/
 }
 .aside-content {
     width: 300px;
